Mise à jour du backend, du frontend et des images

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=snt_afric
-JWT_SECRET=SNT_Afric_2025_Sécurité_Optique
-PORT=5000
+DB_HOST=mysql-fofana.alwaysdata.net
+DB_USER=fofana_snt_afric
+DB_PASSWORD=Chakawa76
+DB_NAME=fofana_snt_afric
 
-# Email Configuration
+PORT=5000
+JWT_SECRET=SNT_Afric_2025_Sécurité_Optique
+
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
