--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "backend-snt-afric",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
